trunk/Archive2/bf/8a1a8d3527ee9e/output
main.cpp: In function 'int main()':
main.cpp:16:21: error: expected ')' before string constant
     std::cout << (u "." v) << "\n";
                     ^
